@@ -14,6 +14,25 @@ max_waiting_connectons = 15
 /*Maximal number of waiting requests*/
 maxexecutionqueue = 4096
 
+[SSL]
+//SSL settings[may decrase server performance, experimental]
+use_ssl = 0
+
+ssl_key_file=
+ssl_crt_file=
+
+[Data sending]
+//Number of data-sending theards
+send_theards = 20
+
+//Async sender mode
+//This optiom may cause PROBLEMS like lost packets or wrong sending order
+async_send = 0
+
+//The file sender uses asynchronous file I/O, so it needs to use buffors
+//The size of buffor is also size of data sent in single TCP packet
+//The size is by default 56KiB
+fsn_frame_buf_size = 57344
 
 [Filesystem settings]
 /*Location of website files
@@ -28,26 +47,6 @@ log =
 
 /* Maximal number of files in page directory[4 bytes/1 entry] */
 pagebase_max = 10240
-
-[NHP compilation]
-/* cpp compiller command, default g++ */
-cppcmp = "g++"
-
-//nhp compile flags
-flags = "-Wall -std=c++0x -O2"
-
-/* Include directory */
-include_dir = "usr/include"
-
-/* Nativehttp header */
-nativehttph_dst = "nativehttp/nativehttp.h"
-
-[Debugging]
-//Show compilator output(1/0)
-cmpout = 0
-
-//Instant std out(disables stdout buffor)(1/0)
-instantso = 0
 
 [HTTP core]
 /*Charset to use for texts
@@ -84,18 +83,25 @@ exec_heap = 2097152
 //this will improve server reliability but will decrase stability
 global_pexec_mutex=1
 
-[Data sending]
-//Number of data-sending theards
-send_theards = 20
+[Debugging]
+//Show compilator output(1/0)
+cmpout = 0
 
-//Async sender mode
-//This optiom may cause PROBLEMS like lost packets or wrong sending order
-async_send = 0
+//Instant std out(disables stdout buffor)(1/0)
+instantso = 0
 
-//The file sender uses asynchronous file I/O, so it needs to use buffors
-//The size of buffor is also size of data sent in single TCP packet
-//The size is by default 56KiB
-fsn_frame_buf_size = 57344
+[NHP compilation]
+/* cpp compiller command, default g++ */
+cppcmp = "g++"
+
+//nhp compile flags
+flags = "-Wall -std=c++0x -O2"
+
+/* Include directory */
+include_dir = "usr/include"
+
+/* Nativehttp header */
+nativehttph_dst = "nativehttp/nativehttp.h"
 
 [Manager]
 //Rate of manager cycles[seconds between each] - checking timeouts, in future also reloading pages, etc. '-1' to turn off (Note that menager is integral part of server and turning it off may cause high risk of DOS)
@@ -109,7 +115,6 @@ exectimeout = -1
 
 //Automatic page reload
 autopagerefresh = 1
-
 
 [Stats]
 //Toggle
@@ -141,16 +146,17 @@ cookie_sslc_name = "NH_sslc"
 //sessions allocated at server strtup
 inital_sessions = 256
 
-//maximal number of sessions
+//maximal number of sessions(recommended value is 'maxconnections' or bigger)
 max_sessions = 1024
 
 //time of life of single session(seconds)
 session_life = 300
 
-[SSL]
-//SSL settings[may decrase server performance, experimental]
-use_ssl = 0
+[WebSockets]
+/* "1" Enables WebSockets */
+ws_enable = 1
 
-ssl_key_file=
-ssl_crt_file=
+/* maximal number of registred WebSocket URIs */
+ws_nuri_max = 256
+
 
