@@ -3,7 +3,8 @@ For more info visit http://nativehttp.org
 
 WS_Dev:
 -maxClients function
-
+-WebSockets base
+-Configuration sorted
 
 0106.13:
 -Thread cleanup
